# AI-Tutorials

./: .gitignore  02-Document-analysis-langgraph.ipynb  Dockerfile  README.md  langgraph.json  logs.txt  note.py  note.txt  pyproject.toml  settings.py
notebooks/: 01-outlines-tutorial.ipynb  02-structured-outputs.ipynb  03-langGraph-compatible-llms.ipynb
notebooks/01-HF-Agents/: 00-intro.ipynb  01-intro-langGraph.ipynb  02-Document-analysis-langgraph.ipynb
notebooks/Langgraph/: 00-lab.ipynb  01-intro.ipynb  01-outlines-tutorial.ipynb  01-tools-intro.ipynb  02-ai-workflow-2.ipynb  03-customize-state-and-time-travel.ipynb  04-Long-term-memory.ipynb  04-langGraph-basics-1.ipynb  04-langGraph-basics-2.ipynb  05-research-assistant.ipynb  05a-research-assistant.ipynb  research-assistant.ipynb
notebooks/prompts/: p1.jinja2  p2.jinja2
schemas/: input_schema.py
src/: __init__.py  settings.py
src/schemas/: __init__.py  input_schema.py
src/studio/: __init__.py  chatbot_with_memory.py  configuration.py
src/utilities/: client_utils.py  jinja_utils.py  llm_utils.py  utilities.py
utilities/: client_utils.py  utilities.py
