[project]
name = "ai-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "instructor==1.8.0",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.16",
    "langfuse>=2.60.4",
    "langgraph>=0.4.1",
    "nest-asyncio>=1.6.0",
    "numpy>=2.2.5",
    "ollama>=0.4.8",
    "pandas>=2.2.3",
    "polars>=1.28.1",
    "pydantic-settings>=2.9.1",
    "rich>=13.9.4",
    "smolagents>=1.14.0",
    "groq==0.23.0",
    "pygraphviz>=1.14",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nb-black-formatter>=1.0.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.6",
]


